[gd_scene load_steps=2 format=3 uid="uid://btyqkpw2g6nu6"]

[ext_resource type="Script" path="res://scripts/AccessScreen.gd" id="1_1tq5c"]

[node name="AccessScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1tq5c")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.3, 0.5, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "EULER MATH GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="AccessLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enter Access Code:"
horizontal_alignment = 1

[node name="CodeInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
placeholder_text = "Enter code here..."
alignment = 1
max_length = 10

[node name="EnterButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "ENTER"

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1